@@ -554,9 +554,9 @@ send_text(StateData, Text) ->
 
 
 send_element(StateData, #xmlel{ns = ?NS_XMPP, name = 'stream'} = El) ->
-    send_text(StateData, exmpp_stream:to_list(El));
+    send_text(StateData, exmpp_stream:to_iolist(El));
 send_element(StateData, El) ->
-    send_text(StateData, exmpp_stanza:to_list(El)).
+    send_text(StateData, exmpp_stanza:to_iolist(El)).
 
 
 change_shaper(StateData, Host, JID) ->
