@@ -799,9 +799,9 @@ send_text(StateData, Text) ->
     ejabberd_socket:send(StateData#state.socket, Text).
 
 send_element(StateData, #xmlel{ns = ?NS_XMPP, name = 'stream'} = El) ->
-    send_text(StateData, exmpp_stream:to_list(El));
+    send_text(StateData, exmpp_stream:to_iolist(El));
 send_element(StateData, El) ->
-    send_text(StateData, exmpp_stanza:to_list(El)).
+    send_text(StateData, exmpp_stanza:to_iolist(El)).
 
 send_queue(StateData, Q) ->
     case queue:out(Q) of
